Replaced HashMap with LinkedHashMap in all occurences to preserve insertion order

--- a/data/default_scenario.properties
+++ b/data/default_scenario.properties
@@ -1,4 +1,8 @@
 mqtt_broker = tcp://localhost:1883
 start_time =
-end_time = 
-sensors = {type:temperature;id:1}
+end_time =
+#several sensors can be added, separated by ^, e.g. sensors = type:temperature;id:1^type:humidity;id:2
+sensors = type:temperature;id:1
+
+https://stackoverflow.com/questions/9672327/parsing-string-as-properties
+https://stackoverflow.com/questions/13441895/what-is-the-best-way-to-load-a-properties-file-on-java
